--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://192.168.0.248:3333
-BLUESOFT_API_TOKEN=rmUXXftbbhPPwukMEmQnfg
-BLUESOFT_API_URL=https://api.cosmos.bluesoft.com.br
+VITE_API_URL="http://localhost:3333"
+BLUESOFT_API_TOKEN="PVi2ZSTPBpLOCLpXIosInw"
+BLUESOFT_API_URL="https://api.cosmos.bluesoft.com.br"
