fix(GTIN): fix gtin request tokens

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_API_URL="http://localhost:3333"
-BLUESOFT_API_TOKEN="PVi2ZSTPBpLOCLpXIosInw"
+BLUESOFT_API_TOKEN="WONdOYEv2S7M49eELOA-FA"
 BLUESOFT_API_URL="https://api.cosmos.bluesoft.com.br"
